# ASR-2Pass

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  dj_py310_environment.yml  requirements.txt  run_build.sh  run_paraformer.sh  run_prepare_server.sh  run_seg_asr_filter.sh  run_seg_asr_filter1.sh  run_transcribe_audio.sh  supervisord.conf
clients/audio/: convert2wav.sh  rm_space_in_path.py  seg_wav.sh  test_yg.scp
clients/cpp/: readme.md
clients/cpp/websocket_client/: CMakeLists.txt  funasr-wss-client-2pass.cpp  funasr-wss-client.cpp  microphone.cpp  microphone.h
clients/cpp/websocket_client/include/: audio.h
clients/html/: h5Server.py  readme.md
clients/html/static/: asr-2pass-demo.html  wsconnecter.js
clients/java/: readme.md
clients/python/: ASR_client_api.py  asr_check.py  compute_wer_line.py  funasr_wss_client.py  funasr_wss_client1.py  hotwords.txt  readme.md  requirements_client.txt  run_multi_transcribe.sh  run_whisper.py  segment_whisper_tsv.py  segment_with_timestamp.py
cpp/websocket_client/: audio.cpp
html/static/: main.js
java/: FunasrWsClient.java  Makefile  readme.md
onnxruntime/: CMakeLists.txt  readme.md  run_server_2pass_rtf.sh  run_server_offline_rtf.sh
onnxruntime/include/: com-define.h  funasrruntime.h  model.h  punc-model.h  vad-model.h
onnxruntime/src/: bias-lm.cpp  context_graph.cpp  context_graph.h  ct-transformer-online.cpp  ct-transformer.cpp  ct-transformer.h  ctc-prefix-decoder.cpp  ctc-prefix-decoder.h  decoder.h  fsmn-vad-online.cpp  fsmn-vad-online.h  fsmn-vad.cpp  fsmn-vad.h  funasrruntime.cpp  paraformer-online.cpp  paraformer-torch.cpp  paraformer-torch.h  paraformer.cpp  paraformer.h  precomp.h  sensevoice-small.cpp  sensevoice-small.h  tpass-stream.cpp  utf8-string.cpp  utf8-string.h  util.cpp  util.h  vocab.cpp  vocab.h  wfst-decodable.h  wfst-decoder.cpp  wfst-decoder.h  win_func.h
python/: README.md  funasr_wss_client.py
utils/: compute-wer.py  compute_wer_line.py  copy_wav_from_scp.py  dnsmos_local.py  infer_paraformer.sh  init_logger.py  merge_transcription.py  mp_compute_wer.sh  remove_space_between_chinese.py  run_add_punc.py  run_seg_asr_filter.sh  run_speechMOS.py  run_whisper.py  run_whisperX.py  run_whisperX1.py  segment_and_convert.py  segment_whisper_tsv.py  snr_filter.py  textnorm_zh.py  wav2dur.py  wav_to_duration.sh
utils/ngram_tools/: merge_ngram.sh  path.sh  preprocess.py  run_svs_fst_aishell.sh  split_chars.py  train_large_lm.sh
utils/ngram_tools/fst/: generate_lexicon_svs.py
websocket/: CMakeLists.txt  readme.md  readme_zh.md  run_server_2pass.sh  run_server_2pass_en.sh  run_server_2pass_para.sh  run_server_2pass_ssl.sh  run_server_2pass_stream_punc.sh  run_server_2pass_svs.sh  run_server_2pass_tp.sh  run_server_offline.sh  run_server_offline_en.sh
websocket/onnxruntime-linux-x64-1.14.0/: GIT_COMMIT_ID
(+32 files in other folders)
